--- a/css/style.css
+++ b/css/style.css
@@ -3,7 +3,6 @@ body {
     Roboto, Oxygen, Ubuntu, Cantarell, sans-serif;
   line-height: 1.5;
   color: #2a2a2a;
- 
 }
 input {
   padding: 10px;
@@ -20,9 +19,9 @@ form > button {
 }
 
 img {
-  display: block;
+display: block;
   width: 100%;
-  height: 250px;
+  height: 250px; 
 }
 
 .search-form {
@@ -40,8 +39,8 @@ img {
   margin-right: auto;
   background-color: rgb(185, 243, 245);
   color: #545353;
-    border: 2px solid #eeeeee;
-    border-radius: 5%;
+  border: 2px solid #eeeeee;
+  border-radius: 5%;
 }
 
 .button.is-hidden {
@@ -62,6 +61,7 @@ img {
 }
 
 a {
+  display: inline-block;
   text-decoration: none;
   color: #2a2a2a;
 }
@@ -79,25 +79,17 @@ a {
 
 .info-item {
   display: flex;
-flex-direction: column;
+  flex-direction: column;
   align-items: center;
 }
 
-/* .photo-card {
-  flex-basis: calc((100% - 90px) / 4);
-
-  margin-right: 30px;
-  margin-bottom: 30px;
-} */
-
 .photo-card:nth-last-child(4n) {
-     margin-right: 0;
-   } 
+  margin-right: 0;
+}
 
 .photo-card:nth-last-child(-n + 4) {
-     margin-bottom: 0;
-   } 
-
+  margin-bottom: 0;
+}
 
 .button {
   display: block;
